--- a/src/components/Section/style.css
+++ b/src/components/Section/style.css
@@ -44,6 +44,19 @@
     margin-left: 30px;
 }
 
+select{
+    height: 40px;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px solid #000;
+}
+
+select option{
+    height: 40px;
+    border: 2px solid #000;
+}
+
 .input-data-form {
     width: 100%;
     display: flex;
@@ -96,6 +109,27 @@
 }
 .option-buttons button:hover{
     background-color:  #f94646;
+}
+
+.card {
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.card .text-view {
+    margin-top: 5px;
+    padding: 3px;
+    background-color: #606ce4;
+    color: #fff;
+
+}
+
+.card .text-information {
+    padding: 3px;
+    background-color: #404143;
+    color: #fff;
+
 }
 
 @media (min-width: 300px) {
