Validação para esvaziar campo e atualização de campo

--- a/src/components/Section/style.css
+++ b/src/components/Section/style.css
@@ -77,6 +77,7 @@ select option{
     height: 35px;
     border-radius: 5px;
     outline: none;
+    padding: 5px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.10);
 }
 
